Fixed background color flickering

--- a/apps/portal/src/assets/main.scss
+++ b/apps/portal/src/assets/main.scss
@@ -15,6 +15,11 @@
   transition: background-color 0.2s;
 }
 
-html {
-  background: var(--background-primary);
+#app {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
 }
